--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -9019,6 +9019,83 @@ references:
   isSpec: "True"
   fullName: MacroTools.Mechanics.WaygateManager.Setup
   nameWithType: WaygateManager.Setup
+- uid: MacroTools.Missiles
+  name: MacroTools.Missiles
+  href: api-macroTools/MacroTools.Missiles.html
+  commentId: N:MacroTools.Missiles
+  fullName: MacroTools.Missiles
+  nameWithType: MacroTools.Missiles
+- uid: MacroTools.Missiles.DefensiveOrbMissile
+  name: DefensiveOrbMissile
+  href: api-macroTools/MacroTools.Missiles.DefensiveOrbMissile.html
+  commentId: T:MacroTools.Missiles.DefensiveOrbMissile
+  fullName: MacroTools.Missiles.DefensiveOrbMissile
+  nameWithType: DefensiveOrbMissile
+- uid: MacroTools.Missiles.DefensiveOrbMissile.#ctor(unit,unit)
+  name: DefensiveOrbMissile(unit, unit)
+  href: api-macroTools/MacroTools.Missiles.DefensiveOrbMissile.html#MacroTools_Missiles_DefensiveOrbMissile__ctor_unit_unit_
+  commentId: M:MacroTools.Missiles.DefensiveOrbMissile.#ctor(unit,unit)
+  fullName: MacroTools.Missiles.DefensiveOrbMissile.DefensiveOrbMissile(unit, unit)
+  nameWithType: DefensiveOrbMissile.DefensiveOrbMissile(unit, unit)
+- uid: MacroTools.Missiles.DefensiveOrbMissile.#ctor*
+  name: DefensiveOrbMissile
+  href: api-macroTools/MacroTools.Missiles.DefensiveOrbMissile.html#MacroTools_Missiles_DefensiveOrbMissile__ctor_
+  commentId: Overload:MacroTools.Missiles.DefensiveOrbMissile.#ctor
+  isSpec: "True"
+  fullName: MacroTools.Missiles.DefensiveOrbMissile.DefensiveOrbMissile
+  nameWithType: DefensiveOrbMissile.DefensiveOrbMissile
+- uid: MacroTools.Missiles.DefensiveOrbMissile.Damage
+  name: Damage
+  href: api-macroTools/MacroTools.Missiles.DefensiveOrbMissile.html#MacroTools_Missiles_DefensiveOrbMissile_Damage
+  commentId: P:MacroTools.Missiles.DefensiveOrbMissile.Damage
+  fullName: MacroTools.Missiles.DefensiveOrbMissile.Damage
+  nameWithType: DefensiveOrbMissile.Damage
+- uid: MacroTools.Missiles.DefensiveOrbMissile.Damage*
+  name: Damage
+  href: api-macroTools/MacroTools.Missiles.DefensiveOrbMissile.html#MacroTools_Missiles_DefensiveOrbMissile_Damage_
+  commentId: Overload:MacroTools.Missiles.DefensiveOrbMissile.Damage
+  isSpec: "True"
+  fullName: MacroTools.Missiles.DefensiveOrbMissile.Damage
+  nameWithType: DefensiveOrbMissile.Damage
+- uid: MacroTools.Missiles.DefensiveOrbMissile.Duration
+  name: Duration
+  href: api-macroTools/MacroTools.Missiles.DefensiveOrbMissile.html#MacroTools_Missiles_DefensiveOrbMissile_Duration
+  commentId: P:MacroTools.Missiles.DefensiveOrbMissile.Duration
+  fullName: MacroTools.Missiles.DefensiveOrbMissile.Duration
+  nameWithType: DefensiveOrbMissile.Duration
+- uid: MacroTools.Missiles.DefensiveOrbMissile.Duration*
+  name: Duration
+  href: api-macroTools/MacroTools.Missiles.DefensiveOrbMissile.html#MacroTools_Missiles_DefensiveOrbMissile_Duration_
+  commentId: Overload:MacroTools.Missiles.DefensiveOrbMissile.Duration
+  isSpec: "True"
+  fullName: MacroTools.Missiles.DefensiveOrbMissile.Duration
+  nameWithType: DefensiveOrbMissile.Duration
+- uid: MacroTools.Missiles.DefensiveOrbMissile.OnCollision(unit)
+  name: OnCollision(unit)
+  href: api-macroTools/MacroTools.Missiles.DefensiveOrbMissile.html#MacroTools_Missiles_DefensiveOrbMissile_OnCollision_unit_
+  commentId: M:MacroTools.Missiles.DefensiveOrbMissile.OnCollision(unit)
+  fullName: MacroTools.Missiles.DefensiveOrbMissile.OnCollision(unit)
+  nameWithType: DefensiveOrbMissile.OnCollision(unit)
+- uid: MacroTools.Missiles.DefensiveOrbMissile.OnCollision*
+  name: OnCollision
+  href: api-macroTools/MacroTools.Missiles.DefensiveOrbMissile.html#MacroTools_Missiles_DefensiveOrbMissile_OnCollision_
+  commentId: Overload:MacroTools.Missiles.DefensiveOrbMissile.OnCollision
+  isSpec: "True"
+  fullName: MacroTools.Missiles.DefensiveOrbMissile.OnCollision
+  nameWithType: DefensiveOrbMissile.OnCollision
+- uid: MacroTools.Missiles.DefensiveOrbMissile.OnPeriodic
+  name: OnPeriodic()
+  href: api-macroTools/MacroTools.Missiles.DefensiveOrbMissile.html#MacroTools_Missiles_DefensiveOrbMissile_OnPeriodic
+  commentId: M:MacroTools.Missiles.DefensiveOrbMissile.OnPeriodic
+  fullName: MacroTools.Missiles.DefensiveOrbMissile.OnPeriodic()
+  nameWithType: DefensiveOrbMissile.OnPeriodic()
+- uid: MacroTools.Missiles.DefensiveOrbMissile.OnPeriodic*
+  name: OnPeriodic
+  href: api-macroTools/MacroTools.Missiles.DefensiveOrbMissile.html#MacroTools_Missiles_DefensiveOrbMissile_OnPeriodic_
+  commentId: Overload:MacroTools.Missiles.DefensiveOrbMissile.OnPeriodic
+  isSpec: "True"
+  fullName: MacroTools.Missiles.DefensiveOrbMissile.OnPeriodic
+  nameWithType: DefensiveOrbMissile.OnPeriodic
 - uid: MacroTools.PassiveAbilities
   name: MacroTools.PassiveAbilities
   href: api-macroTools/MacroTools.PassiveAbilities.html
@@ -9115,6 +9192,116 @@ references:
   isSpec: "True"
   fullName: MacroTools.PassiveAbilities.AnimationSpeedMultiplier.OnConstruction
   nameWithType: AnimationSpeedMultiplier.OnConstruction
+- uid: MacroTools.PassiveAbilities.DefensiveOrbs
+  name: DefensiveOrbs
+  href: api-macroTools/MacroTools.PassiveAbilities.DefensiveOrbs.html
+  commentId: T:MacroTools.PassiveAbilities.DefensiveOrbs
+  fullName: MacroTools.PassiveAbilities.DefensiveOrbs
+  nameWithType: DefensiveOrbs
+- uid: MacroTools.PassiveAbilities.DefensiveOrbs.#ctor(System.Int32,System.Int32)
+  name: DefensiveOrbs(Int32, Int32)
+  href: api-macroTools/MacroTools.PassiveAbilities.DefensiveOrbs.html#MacroTools_PassiveAbilities_DefensiveOrbs__ctor_System_Int32_System_Int32_
+  commentId: M:MacroTools.PassiveAbilities.DefensiveOrbs.#ctor(System.Int32,System.Int32)
+  fullName: MacroTools.PassiveAbilities.DefensiveOrbs.DefensiveOrbs(System.Int32, System.Int32)
+  nameWithType: DefensiveOrbs.DefensiveOrbs(Int32, Int32)
+- uid: MacroTools.PassiveAbilities.DefensiveOrbs.#ctor*
+  name: DefensiveOrbs
+  href: api-macroTools/MacroTools.PassiveAbilities.DefensiveOrbs.html#MacroTools_PassiveAbilities_DefensiveOrbs__ctor_
+  commentId: Overload:MacroTools.PassiveAbilities.DefensiveOrbs.#ctor
+  isSpec: "True"
+  fullName: MacroTools.PassiveAbilities.DefensiveOrbs.DefensiveOrbs
+  nameWithType: DefensiveOrbs.DefensiveOrbs
+- uid: MacroTools.PassiveAbilities.DefensiveOrbs.CollisionRadius
+  name: CollisionRadius
+  href: api-macroTools/MacroTools.PassiveAbilities.DefensiveOrbs.html#MacroTools_PassiveAbilities_DefensiveOrbs_CollisionRadius
+  commentId: P:MacroTools.PassiveAbilities.DefensiveOrbs.CollisionRadius
+  fullName: MacroTools.PassiveAbilities.DefensiveOrbs.CollisionRadius
+  nameWithType: DefensiveOrbs.CollisionRadius
+- uid: MacroTools.PassiveAbilities.DefensiveOrbs.CollisionRadius*
+  name: CollisionRadius
+  href: api-macroTools/MacroTools.PassiveAbilities.DefensiveOrbs.html#MacroTools_PassiveAbilities_DefensiveOrbs_CollisionRadius_
+  commentId: Overload:MacroTools.PassiveAbilities.DefensiveOrbs.CollisionRadius
+  isSpec: "True"
+  fullName: MacroTools.PassiveAbilities.DefensiveOrbs.CollisionRadius
+  nameWithType: DefensiveOrbs.CollisionRadius
+- uid: MacroTools.PassiveAbilities.DefensiveOrbs.Damage
+  name: Damage
+  href: api-macroTools/MacroTools.PassiveAbilities.DefensiveOrbs.html#MacroTools_PassiveAbilities_DefensiveOrbs_Damage
+  commentId: P:MacroTools.PassiveAbilities.DefensiveOrbs.Damage
+  fullName: MacroTools.PassiveAbilities.DefensiveOrbs.Damage
+  nameWithType: DefensiveOrbs.Damage
+- uid: MacroTools.PassiveAbilities.DefensiveOrbs.Damage*
+  name: Damage
+  href: api-macroTools/MacroTools.PassiveAbilities.DefensiveOrbs.html#MacroTools_PassiveAbilities_DefensiveOrbs_Damage_
+  commentId: Overload:MacroTools.PassiveAbilities.DefensiveOrbs.Damage
+  isSpec: "True"
+  fullName: MacroTools.PassiveAbilities.DefensiveOrbs.Damage
+  nameWithType: DefensiveOrbs.Damage
+- uid: MacroTools.PassiveAbilities.DefensiveOrbs.OnSpellFinish
+  name: OnSpellFinish()
+  href: api-macroTools/MacroTools.PassiveAbilities.DefensiveOrbs.html#MacroTools_PassiveAbilities_DefensiveOrbs_OnSpellFinish
+  commentId: M:MacroTools.PassiveAbilities.DefensiveOrbs.OnSpellFinish
+  fullName: MacroTools.PassiveAbilities.DefensiveOrbs.OnSpellFinish()
+  nameWithType: DefensiveOrbs.OnSpellFinish()
+- uid: MacroTools.PassiveAbilities.DefensiveOrbs.OnSpellFinish*
+  name: OnSpellFinish
+  href: api-macroTools/MacroTools.PassiveAbilities.DefensiveOrbs.html#MacroTools_PassiveAbilities_DefensiveOrbs_OnSpellFinish_
+  commentId: Overload:MacroTools.PassiveAbilities.DefensiveOrbs.OnSpellFinish
+  isSpec: "True"
+  fullName: MacroTools.PassiveAbilities.DefensiveOrbs.OnSpellFinish
+  nameWithType: DefensiveOrbs.OnSpellFinish
+- uid: MacroTools.PassiveAbilities.DefensiveOrbs.OrbDuration
+  name: OrbDuration
+  href: api-macroTools/MacroTools.PassiveAbilities.DefensiveOrbs.html#MacroTools_PassiveAbilities_DefensiveOrbs_OrbDuration
+  commentId: P:MacroTools.PassiveAbilities.DefensiveOrbs.OrbDuration
+  fullName: MacroTools.PassiveAbilities.DefensiveOrbs.OrbDuration
+  nameWithType: DefensiveOrbs.OrbDuration
+- uid: MacroTools.PassiveAbilities.DefensiveOrbs.OrbDuration*
+  name: OrbDuration
+  href: api-macroTools/MacroTools.PassiveAbilities.DefensiveOrbs.html#MacroTools_PassiveAbilities_DefensiveOrbs_OrbDuration_
+  commentId: Overload:MacroTools.PassiveAbilities.DefensiveOrbs.OrbDuration
+  isSpec: "True"
+  fullName: MacroTools.PassiveAbilities.DefensiveOrbs.OrbDuration
+  nameWithType: DefensiveOrbs.OrbDuration
+- uid: MacroTools.PassiveAbilities.DefensiveOrbs.OrbEffectPath
+  name: OrbEffectPath
+  href: api-macroTools/MacroTools.PassiveAbilities.DefensiveOrbs.html#MacroTools_PassiveAbilities_DefensiveOrbs_OrbEffectPath
+  commentId: P:MacroTools.PassiveAbilities.DefensiveOrbs.OrbEffectPath
+  fullName: MacroTools.PassiveAbilities.DefensiveOrbs.OrbEffectPath
+  nameWithType: DefensiveOrbs.OrbEffectPath
+- uid: MacroTools.PassiveAbilities.DefensiveOrbs.OrbEffectPath*
+  name: OrbEffectPath
+  href: api-macroTools/MacroTools.PassiveAbilities.DefensiveOrbs.html#MacroTools_PassiveAbilities_DefensiveOrbs_OrbEffectPath_
+  commentId: Overload:MacroTools.PassiveAbilities.DefensiveOrbs.OrbEffectPath
+  isSpec: "True"
+  fullName: MacroTools.PassiveAbilities.DefensiveOrbs.OrbEffectPath
+  nameWithType: DefensiveOrbs.OrbEffectPath
+- uid: MacroTools.PassiveAbilities.DefensiveOrbs.OrbitalPeriod
+  name: OrbitalPeriod
+  href: api-macroTools/MacroTools.PassiveAbilities.DefensiveOrbs.html#MacroTools_PassiveAbilities_DefensiveOrbs_OrbitalPeriod
+  commentId: P:MacroTools.PassiveAbilities.DefensiveOrbs.OrbitalPeriod
+  fullName: MacroTools.PassiveAbilities.DefensiveOrbs.OrbitalPeriod
+  nameWithType: DefensiveOrbs.OrbitalPeriod
+- uid: MacroTools.PassiveAbilities.DefensiveOrbs.OrbitalPeriod*
+  name: OrbitalPeriod
+  href: api-macroTools/MacroTools.PassiveAbilities.DefensiveOrbs.html#MacroTools_PassiveAbilities_DefensiveOrbs_OrbitalPeriod_
+  commentId: Overload:MacroTools.PassiveAbilities.DefensiveOrbs.OrbitalPeriod
+  isSpec: "True"
+  fullName: MacroTools.PassiveAbilities.DefensiveOrbs.OrbitalPeriod
+  nameWithType: DefensiveOrbs.OrbitalPeriod
+- uid: MacroTools.PassiveAbilities.DefensiveOrbs.OrbitRadius
+  name: OrbitRadius
+  href: api-macroTools/MacroTools.PassiveAbilities.DefensiveOrbs.html#MacroTools_PassiveAbilities_DefensiveOrbs_OrbitRadius
+  commentId: P:MacroTools.PassiveAbilities.DefensiveOrbs.OrbitRadius
+  fullName: MacroTools.PassiveAbilities.DefensiveOrbs.OrbitRadius
+  nameWithType: DefensiveOrbs.OrbitRadius
+- uid: MacroTools.PassiveAbilities.DefensiveOrbs.OrbitRadius*
+  name: OrbitRadius
+  href: api-macroTools/MacroTools.PassiveAbilities.DefensiveOrbs.html#MacroTools_PassiveAbilities_DefensiveOrbs_OrbitRadius_
+  commentId: Overload:MacroTools.PassiveAbilities.DefensiveOrbs.OrbitRadius
+  isSpec: "True"
+  fullName: MacroTools.PassiveAbilities.DefensiveOrbs.OrbitRadius
+  nameWithType: DefensiveOrbs.OrbitRadius
 - uid: MacroTools.PassiveAbilities.Execute
   name: Execute
   href: api-macroTools/MacroTools.PassiveAbilities.Execute.html
