deploy: 7c8ab29c63162dbe0c521e16b6e434e0fe0b4439

--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -10543,6 +10543,19 @@ references:
   isSpec: "True"
   fullName: MacroTools.Powers.CityOfHeroes.CityOfHeroes
   nameWithType: CityOfHeroes.CityOfHeroes
+- uid: MacroTools.Powers.CityOfHeroes.Filter
+  name: Filter
+  href: api-macroTools/MacroTools.Powers.CityOfHeroes.html#MacroTools_Powers_CityOfHeroes_Filter
+  commentId: P:MacroTools.Powers.CityOfHeroes.Filter
+  fullName: MacroTools.Powers.CityOfHeroes.Filter
+  nameWithType: CityOfHeroes.Filter
+- uid: MacroTools.Powers.CityOfHeroes.Filter*
+  name: Filter
+  href: api-macroTools/MacroTools.Powers.CityOfHeroes.html#MacroTools_Powers_CityOfHeroes_Filter_
+  commentId: Overload:MacroTools.Powers.CityOfHeroes.Filter
+  isSpec: "True"
+  fullName: MacroTools.Powers.CityOfHeroes.Filter
+  nameWithType: CityOfHeroes.Filter
 - uid: MacroTools.Powers.CityOfHeroes.HeroGlowAbilityTypeId
   name: HeroGlowAbilityTypeId
   href: api-macroTools/MacroTools.Powers.CityOfHeroes.html#MacroTools_Powers_CityOfHeroes_HeroGlowAbilityTypeId
