--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -4269,6 +4269,109 @@ references:
   isSpec: "True"
   fullName: MacroTools.Extensions.FrameExtensions.GetWidth
   nameWithType: FrameExtensions.GetWidth
+- uid: MacroTools.Extensions.GroupExtensions
+  name: GroupExtensions
+  href: api-macroTools/MacroTools.Extensions.GroupExtensions.html
+  commentId: T:MacroTools.Extensions.GroupExtensions
+  fullName: MacroTools.Extensions.GroupExtensions
+  nameWithType: GroupExtensions
+- uid: MacroTools.Extensions.GroupExtensions.Add(group,unit)
+  name: Add(group, unit)
+  href: api-macroTools/MacroTools.Extensions.GroupExtensions.html#MacroTools_Extensions_GroupExtensions_Add_group_unit_
+  commentId: M:MacroTools.Extensions.GroupExtensions.Add(group,unit)
+  fullName: MacroTools.Extensions.GroupExtensions.Add(group, unit)
+  nameWithType: GroupExtensions.Add(group, unit)
+- uid: MacroTools.Extensions.GroupExtensions.Add*
+  name: Add
+  href: api-macroTools/MacroTools.Extensions.GroupExtensions.html#MacroTools_Extensions_GroupExtensions_Add_
+  commentId: Overload:MacroTools.Extensions.GroupExtensions.Add
+  isSpec: "True"
+  fullName: MacroTools.Extensions.GroupExtensions.Add
+  nameWithType: GroupExtensions.Add
+- uid: MacroTools.Extensions.GroupExtensions.EmptyToList(group)
+  name: EmptyToList(group)
+  href: api-macroTools/MacroTools.Extensions.GroupExtensions.html#MacroTools_Extensions_GroupExtensions_EmptyToList_group_
+  commentId: M:MacroTools.Extensions.GroupExtensions.EmptyToList(group)
+  fullName: MacroTools.Extensions.GroupExtensions.EmptyToList(group)
+  nameWithType: GroupExtensions.EmptyToList(group)
+- uid: MacroTools.Extensions.GroupExtensions.EmptyToList*
+  name: EmptyToList
+  href: api-macroTools/MacroTools.Extensions.GroupExtensions.html#MacroTools_Extensions_GroupExtensions_EmptyToList_
+  commentId: Overload:MacroTools.Extensions.GroupExtensions.EmptyToList
+  isSpec: "True"
+  fullName: MacroTools.Extensions.GroupExtensions.EmptyToList
+  nameWithType: GroupExtensions.EmptyToList
+- uid: MacroTools.Extensions.GroupExtensions.EnumSelectedUnits(group,player)
+  name: EnumSelectedUnits(group, player)
+  href: api-macroTools/MacroTools.Extensions.GroupExtensions.html#MacroTools_Extensions_GroupExtensions_EnumSelectedUnits_group_player_
+  commentId: M:MacroTools.Extensions.GroupExtensions.EnumSelectedUnits(group,player)
+  fullName: MacroTools.Extensions.GroupExtensions.EnumSelectedUnits(group, player)
+  nameWithType: GroupExtensions.EnumSelectedUnits(group, player)
+- uid: MacroTools.Extensions.GroupExtensions.EnumSelectedUnits*
+  name: EnumSelectedUnits
+  href: api-macroTools/MacroTools.Extensions.GroupExtensions.html#MacroTools_Extensions_GroupExtensions_EnumSelectedUnits_
+  commentId: Overload:MacroTools.Extensions.GroupExtensions.EnumSelectedUnits
+  isSpec: "True"
+  fullName: MacroTools.Extensions.GroupExtensions.EnumSelectedUnits
+  nameWithType: GroupExtensions.EnumSelectedUnits
+- uid: MacroTools.Extensions.GroupExtensions.EnumUnitsInRange(group,Point,System.Single)
+  name: EnumUnitsInRange(group, Point, Single)
+  href: api-macroTools/MacroTools.Extensions.GroupExtensions.html#MacroTools_Extensions_GroupExtensions_EnumUnitsInRange_group_Point_System_Single_
+  commentId: M:MacroTools.Extensions.GroupExtensions.EnumUnitsInRange(group,Point,System.Single)
+  fullName: MacroTools.Extensions.GroupExtensions.EnumUnitsInRange(group, Point, System.Single)
+  nameWithType: GroupExtensions.EnumUnitsInRange(group, Point, Single)
+- uid: MacroTools.Extensions.GroupExtensions.EnumUnitsInRange*
+  name: EnumUnitsInRange
+  href: api-macroTools/MacroTools.Extensions.GroupExtensions.html#MacroTools_Extensions_GroupExtensions_EnumUnitsInRange_
+  commentId: Overload:MacroTools.Extensions.GroupExtensions.EnumUnitsInRange
+  isSpec: "True"
+  fullName: MacroTools.Extensions.GroupExtensions.EnumUnitsInRange
+  nameWithType: GroupExtensions.EnumUnitsInRange
+- uid: MacroTools.Extensions.GroupExtensions.EnumUnitsInRect(group,rect)
+  name: EnumUnitsInRect(group, rect)
+  href: api-macroTools/MacroTools.Extensions.GroupExtensions.html#MacroTools_Extensions_GroupExtensions_EnumUnitsInRect_group_rect_
+  commentId: M:MacroTools.Extensions.GroupExtensions.EnumUnitsInRect(group,rect)
+  fullName: MacroTools.Extensions.GroupExtensions.EnumUnitsInRect(group, rect)
+  nameWithType: GroupExtensions.EnumUnitsInRect(group, rect)
+- uid: MacroTools.Extensions.GroupExtensions.EnumUnitsInRect(group,Rectangle)
+  name: EnumUnitsInRect(group, Rectangle)
+  href: api-macroTools/MacroTools.Extensions.GroupExtensions.html#MacroTools_Extensions_GroupExtensions_EnumUnitsInRect_group_Rectangle_
+  commentId: M:MacroTools.Extensions.GroupExtensions.EnumUnitsInRect(group,Rectangle)
+  fullName: MacroTools.Extensions.GroupExtensions.EnumUnitsInRect(group, Rectangle)
+  nameWithType: GroupExtensions.EnumUnitsInRect(group, Rectangle)
+- uid: MacroTools.Extensions.GroupExtensions.EnumUnitsInRect*
+  name: EnumUnitsInRect
+  href: api-macroTools/MacroTools.Extensions.GroupExtensions.html#MacroTools_Extensions_GroupExtensions_EnumUnitsInRect_
+  commentId: Overload:MacroTools.Extensions.GroupExtensions.EnumUnitsInRect
+  isSpec: "True"
+  fullName: MacroTools.Extensions.GroupExtensions.EnumUnitsInRect
+  nameWithType: GroupExtensions.EnumUnitsInRect
+- uid: MacroTools.Extensions.GroupExtensions.EnumUnitsOfPlayer(group,player)
+  name: EnumUnitsOfPlayer(group, player)
+  href: api-macroTools/MacroTools.Extensions.GroupExtensions.html#MacroTools_Extensions_GroupExtensions_EnumUnitsOfPlayer_group_player_
+  commentId: M:MacroTools.Extensions.GroupExtensions.EnumUnitsOfPlayer(group,player)
+  fullName: MacroTools.Extensions.GroupExtensions.EnumUnitsOfPlayer(group, player)
+  nameWithType: GroupExtensions.EnumUnitsOfPlayer(group, player)
+- uid: MacroTools.Extensions.GroupExtensions.EnumUnitsOfPlayer*
+  name: EnumUnitsOfPlayer
+  href: api-macroTools/MacroTools.Extensions.GroupExtensions.html#MacroTools_Extensions_GroupExtensions_EnumUnitsOfPlayer_
+  commentId: Overload:MacroTools.Extensions.GroupExtensions.EnumUnitsOfPlayer
+  isSpec: "True"
+  fullName: MacroTools.Extensions.GroupExtensions.EnumUnitsOfPlayer
+  nameWithType: GroupExtensions.EnumUnitsOfPlayer
+- uid: MacroTools.Extensions.GroupExtensions.EnumUnitsOfType(group,System.Int32)
+  name: EnumUnitsOfType(group, Int32)
+  href: api-macroTools/MacroTools.Extensions.GroupExtensions.html#MacroTools_Extensions_GroupExtensions_EnumUnitsOfType_group_System_Int32_
+  commentId: M:MacroTools.Extensions.GroupExtensions.EnumUnitsOfType(group,System.Int32)
+  fullName: MacroTools.Extensions.GroupExtensions.EnumUnitsOfType(group, System.Int32)
+  nameWithType: GroupExtensions.EnumUnitsOfType(group, Int32)
+- uid: MacroTools.Extensions.GroupExtensions.EnumUnitsOfType*
+  name: EnumUnitsOfType
+  href: api-macroTools/MacroTools.Extensions.GroupExtensions.html#MacroTools_Extensions_GroupExtensions_EnumUnitsOfType_
+  commentId: Overload:MacroTools.Extensions.GroupExtensions.EnumUnitsOfType
+  isSpec: "True"
+  fullName: MacroTools.Extensions.GroupExtensions.EnumUnitsOfType
+  nameWithType: GroupExtensions.EnumUnitsOfType
 - uid: MacroTools.Extensions.ItemExtensions
   name: ItemExtensions
   href: api-macroTools/MacroTools.Extensions.ItemExtensions.html
@@ -16803,135 +16906,6 @@ references:
   isSpec: "True"
   fullName: MacroTools.Wrappers.EaxExtensions.GetStringEquivalent
   nameWithType: EaxExtensions.GetStringEquivalent
-- uid: MacroTools.Wrappers.GroupWrapper
-  name: GroupWrapper
-  href: api-macroTools/MacroTools.Wrappers.GroupWrapper.html
-  commentId: T:MacroTools.Wrappers.GroupWrapper
-  fullName: MacroTools.Wrappers.GroupWrapper
-  nameWithType: GroupWrapper
-- uid: MacroTools.Wrappers.GroupWrapper.#ctor
-  name: GroupWrapper()
-  href: api-macroTools/MacroTools.Wrappers.GroupWrapper.html#MacroTools_Wrappers_GroupWrapper__ctor
-  commentId: M:MacroTools.Wrappers.GroupWrapper.#ctor
-  fullName: MacroTools.Wrappers.GroupWrapper.GroupWrapper()
-  nameWithType: GroupWrapper.GroupWrapper()
-- uid: MacroTools.Wrappers.GroupWrapper.#ctor*
-  name: GroupWrapper
-  href: api-macroTools/MacroTools.Wrappers.GroupWrapper.html#MacroTools_Wrappers_GroupWrapper__ctor_
-  commentId: Overload:MacroTools.Wrappers.GroupWrapper.#ctor
-  isSpec: "True"
-  fullName: MacroTools.Wrappers.GroupWrapper.GroupWrapper
-  nameWithType: GroupWrapper.GroupWrapper
-- uid: MacroTools.Wrappers.GroupWrapper.Add(unit)
-  name: Add(unit)
-  href: api-macroTools/MacroTools.Wrappers.GroupWrapper.html#MacroTools_Wrappers_GroupWrapper_Add_unit_
-  commentId: M:MacroTools.Wrappers.GroupWrapper.Add(unit)
-  fullName: MacroTools.Wrappers.GroupWrapper.Add(unit)
-  nameWithType: GroupWrapper.Add(unit)
-- uid: MacroTools.Wrappers.GroupWrapper.Add*
-  name: Add
-  href: api-macroTools/MacroTools.Wrappers.GroupWrapper.html#MacroTools_Wrappers_GroupWrapper_Add_
-  commentId: Overload:MacroTools.Wrappers.GroupWrapper.Add
-  isSpec: "True"
-  fullName: MacroTools.Wrappers.GroupWrapper.Add
-  nameWithType: GroupWrapper.Add
-- uid: MacroTools.Wrappers.GroupWrapper.Dispose
-  name: Dispose()
-  href: api-macroTools/MacroTools.Wrappers.GroupWrapper.html#MacroTools_Wrappers_GroupWrapper_Dispose
-  commentId: M:MacroTools.Wrappers.GroupWrapper.Dispose
-  fullName: MacroTools.Wrappers.GroupWrapper.Dispose()
-  nameWithType: GroupWrapper.Dispose()
-- uid: MacroTools.Wrappers.GroupWrapper.Dispose*
-  name: Dispose
-  href: api-macroTools/MacroTools.Wrappers.GroupWrapper.html#MacroTools_Wrappers_GroupWrapper_Dispose_
-  commentId: Overload:MacroTools.Wrappers.GroupWrapper.Dispose
-  isSpec: "True"
-  fullName: MacroTools.Wrappers.GroupWrapper.Dispose
-  nameWithType: GroupWrapper.Dispose
-- uid: MacroTools.Wrappers.GroupWrapper.EmptyToList
-  name: EmptyToList()
-  href: api-macroTools/MacroTools.Wrappers.GroupWrapper.html#MacroTools_Wrappers_GroupWrapper_EmptyToList
-  commentId: M:MacroTools.Wrappers.GroupWrapper.EmptyToList
-  fullName: MacroTools.Wrappers.GroupWrapper.EmptyToList()
-  nameWithType: GroupWrapper.EmptyToList()
-- uid: MacroTools.Wrappers.GroupWrapper.EmptyToList*
-  name: EmptyToList
-  href: api-macroTools/MacroTools.Wrappers.GroupWrapper.html#MacroTools_Wrappers_GroupWrapper_EmptyToList_
-  commentId: Overload:MacroTools.Wrappers.GroupWrapper.EmptyToList
-  isSpec: "True"
-  fullName: MacroTools.Wrappers.GroupWrapper.EmptyToList
-  nameWithType: GroupWrapper.EmptyToList
-- uid: MacroTools.Wrappers.GroupWrapper.EnumSelectedUnits(player)
-  name: EnumSelectedUnits(player)
-  href: api-macroTools/MacroTools.Wrappers.GroupWrapper.html#MacroTools_Wrappers_GroupWrapper_EnumSelectedUnits_player_
-  commentId: M:MacroTools.Wrappers.GroupWrapper.EnumSelectedUnits(player)
-  fullName: MacroTools.Wrappers.GroupWrapper.EnumSelectedUnits(player)
-  nameWithType: GroupWrapper.EnumSelectedUnits(player)
-- uid: MacroTools.Wrappers.GroupWrapper.EnumSelectedUnits*
-  name: EnumSelectedUnits
-  href: api-macroTools/MacroTools.Wrappers.GroupWrapper.html#MacroTools_Wrappers_GroupWrapper_EnumSelectedUnits_
-  commentId: Overload:MacroTools.Wrappers.GroupWrapper.EnumSelectedUnits
-  isSpec: "True"
-  fullName: MacroTools.Wrappers.GroupWrapper.EnumSelectedUnits
-  nameWithType: GroupWrapper.EnumSelectedUnits
-- uid: MacroTools.Wrappers.GroupWrapper.EnumUnitsInRange(Point,System.Single)
-  name: EnumUnitsInRange(Point, Single)
-  href: api-macroTools/MacroTools.Wrappers.GroupWrapper.html#MacroTools_Wrappers_GroupWrapper_EnumUnitsInRange_Point_System_Single_
-  commentId: M:MacroTools.Wrappers.GroupWrapper.EnumUnitsInRange(Point,System.Single)
-  fullName: MacroTools.Wrappers.GroupWrapper.EnumUnitsInRange(Point, System.Single)
-  nameWithType: GroupWrapper.EnumUnitsInRange(Point, Single)
-- uid: MacroTools.Wrappers.GroupWrapper.EnumUnitsInRange*
-  name: EnumUnitsInRange
-  href: api-macroTools/MacroTools.Wrappers.GroupWrapper.html#MacroTools_Wrappers_GroupWrapper_EnumUnitsInRange_
-  commentId: Overload:MacroTools.Wrappers.GroupWrapper.EnumUnitsInRange
-  isSpec: "True"
-  fullName: MacroTools.Wrappers.GroupWrapper.EnumUnitsInRange
-  nameWithType: GroupWrapper.EnumUnitsInRange
-- uid: MacroTools.Wrappers.GroupWrapper.EnumUnitsInRect(rect)
-  name: EnumUnitsInRect(rect)
-  href: api-macroTools/MacroTools.Wrappers.GroupWrapper.html#MacroTools_Wrappers_GroupWrapper_EnumUnitsInRect_rect_
-  commentId: M:MacroTools.Wrappers.GroupWrapper.EnumUnitsInRect(rect)
-  fullName: MacroTools.Wrappers.GroupWrapper.EnumUnitsInRect(rect)
-  nameWithType: GroupWrapper.EnumUnitsInRect(rect)
-- uid: MacroTools.Wrappers.GroupWrapper.EnumUnitsInRect(Rectangle)
-  name: EnumUnitsInRect(Rectangle)
-  href: api-macroTools/MacroTools.Wrappers.GroupWrapper.html#MacroTools_Wrappers_GroupWrapper_EnumUnitsInRect_Rectangle_
-  commentId: M:MacroTools.Wrappers.GroupWrapper.EnumUnitsInRect(Rectangle)
-  fullName: MacroTools.Wrappers.GroupWrapper.EnumUnitsInRect(Rectangle)
-  nameWithType: GroupWrapper.EnumUnitsInRect(Rectangle)
-- uid: MacroTools.Wrappers.GroupWrapper.EnumUnitsInRect*
-  name: EnumUnitsInRect
-  href: api-macroTools/MacroTools.Wrappers.GroupWrapper.html#MacroTools_Wrappers_GroupWrapper_EnumUnitsInRect_
-  commentId: Overload:MacroTools.Wrappers.GroupWrapper.EnumUnitsInRect
-  isSpec: "True"
-  fullName: MacroTools.Wrappers.GroupWrapper.EnumUnitsInRect
-  nameWithType: GroupWrapper.EnumUnitsInRect
-- uid: MacroTools.Wrappers.GroupWrapper.EnumUnitsOfPlayer(player)
-  name: EnumUnitsOfPlayer(player)
-  href: api-macroTools/MacroTools.Wrappers.GroupWrapper.html#MacroTools_Wrappers_GroupWrapper_EnumUnitsOfPlayer_player_
-  commentId: M:MacroTools.Wrappers.GroupWrapper.EnumUnitsOfPlayer(player)
-  fullName: MacroTools.Wrappers.GroupWrapper.EnumUnitsOfPlayer(player)
-  nameWithType: GroupWrapper.EnumUnitsOfPlayer(player)
-- uid: MacroTools.Wrappers.GroupWrapper.EnumUnitsOfPlayer*
-  name: EnumUnitsOfPlayer
-  href: api-macroTools/MacroTools.Wrappers.GroupWrapper.html#MacroTools_Wrappers_GroupWrapper_EnumUnitsOfPlayer_
-  commentId: Overload:MacroTools.Wrappers.GroupWrapper.EnumUnitsOfPlayer
-  isSpec: "True"
-  fullName: MacroTools.Wrappers.GroupWrapper.EnumUnitsOfPlayer
-  nameWithType: GroupWrapper.EnumUnitsOfPlayer
-- uid: MacroTools.Wrappers.GroupWrapper.EnumUnitsOfType(System.Int32)
-  name: EnumUnitsOfType(Int32)
-  href: api-macroTools/MacroTools.Wrappers.GroupWrapper.html#MacroTools_Wrappers_GroupWrapper_EnumUnitsOfType_System_Int32_
-  commentId: M:MacroTools.Wrappers.GroupWrapper.EnumUnitsOfType(System.Int32)
-  fullName: MacroTools.Wrappers.GroupWrapper.EnumUnitsOfType(System.Int32)
-  nameWithType: GroupWrapper.EnumUnitsOfType(Int32)
-- uid: MacroTools.Wrappers.GroupWrapper.EnumUnitsOfType*
-  name: EnumUnitsOfType
-  href: api-macroTools/MacroTools.Wrappers.GroupWrapper.html#MacroTools_Wrappers_GroupWrapper_EnumUnitsOfType_
-  commentId: Overload:MacroTools.Wrappers.GroupWrapper.EnumUnitsOfType
-  isSpec: "True"
-  fullName: MacroTools.Wrappers.GroupWrapper.EnumUnitsOfType
-  nameWithType: GroupWrapper.EnumUnitsOfType
 - uid: MacroTools.Wrappers.SoundEax
   name: SoundEax
   href: api-macroTools/MacroTools.Wrappers.SoundEax.html
